# python-build-standalone

./: BENCHMARKS.md  CONTRIBUTING.rst  Cargo.toml  LICENSE.gdbm.txt  build-linux.py  build-macos.py  build-uv.py  build.py  check.py  ci-defaults.yaml  ci-matrix.py  ci-prepare-cpython-source.py  ci-runners.yaml  ci-targets-pull-request-no-labels.yaml  ci-targets.yaml  generate-version-metadata.py  latest-release.json  pr-targets.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  requirements.win-arm64.txt  requirements.win.txt  stdlib-test-annotations.yml  test_ar_normalization.py
.github/: dependabot.yml
cpython-unix/: 0001-gh-103839-Allow-building-Tkinter-against-Tcl-8.7-310.patch  0001-gh-103839-Allow-building-Tkinter-against-Tcl-8.7-311.patch  0002-3.12-gh-104399-Use-newer-libtommath-APIs-when-ne-310.patch  0002-3.12-gh-104399-Use-newer-libtommath-APIs-when-ne-311.patch  0003-3.12-gh-103194-Fix-Tkinter-s-Tcl-value-type-hand-310.patch  0003-3.12-gh-103194-Fix-Tkinter-s-Tcl-value-type-hand-311.patch  0004-3.12-gh-112672-Fix-builtin-Tkinter-with-Tcl-9.0--310.patch  0004-3.12-gh-112672-Fix-builtin-Tkinter-with-Tcl-9.0--311.patch  Makefile  base.Dockerfile  build-binutils.sh  build-bzip2.sh  build-certifi.sh  build-cpython.sh  build-expat.sh  build-gdbm.sh  build-libX11.sh  build-libxcb.sh  build-main.py  build-musl.sh  build-patchelf.sh  build-pkgconf.sh  build-sqlite.sh  build-tcl.sh  build-tk.sh  build-uuid.sh  build-xextproto.sh  build-xproto.sh  build-xz.sh  build-zstd.sh  build.cross-loongarch64.Dockerfile  build.cross-riscv64.Dockerfile  build.cross.Dockerfile  build.py  extension-modules.yml  (+42 more)
src/: s3.rs  (+4 more)
(+35 files in other folders)
