[package]
name = "pythonbuild"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
apple-sdk = "0.6.0"
bytes = "1.10.1"
clap = "4.5.41"
duct = "1.0.0"
flate2 = "1.1.2"
futures = "0.3.30"
goblin = "0.10.0"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.2.0", features = ["client"] }
hyper-util = { version = "0.1.16" }
normalize-path = "0.2.1"
object = "0.37.1"
octocrab = { version = "0.44.1", features = ["rustls", "stream"] }
once_cell = "1.21.3"
pdb = "0.8.0"
pep440_rs = "0.7.3"
rayon = "1.8.1"
reqwest = { version = "0.12.22", features = ["rustls-tls-webpki-roots", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
scroll = "0.13.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.20.0"
text-stub-library = "0.9.0"
tokio = "1.46.1"
tokio-util = "0.7.15"
url = "2.5.0"
version-compare = "0.2.0"
zip = "4.3.0"
zstd = "0.13.3"
